infra/kubernetes/overlays/prod/college-service-env-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata: {name: college-service, namespace: emtaf}
spec:
 template:
  spec:
   containers:
   - name: college-service
