infra/kubernetes/overlays/prod/external-env-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata: {name: hospital-service}
spec:
 template:
  spec:
   containers:
   - name: hospital-service
