infra/kubernetes/overlays/prod/hotel-service-env-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata: {name: hotel-service, namespace: emtaf}
spec:
 template:
  spec:
   containers:
   - name: hotel-service
