infra/kubernetes/overlays/prod/realestate-service-env-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata: {name: realestate-service}
spec:
 template:
  spec:
   containers:
   - name: realestate-service
