infra/kubernetes/overlays/prod/remove-deployment-emtaf-demo-wireframe.yaml
apiVersion: apps/v1
kind: Deployment
metadata: {name: emtaf-demo-wireframe, namespace: emtaf}
$patch: delete
