infra/kubernetes/overlays/prod/remove-deployment-postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata: {name: postgres, namespace: emtaf}
$patch: delete
