infra/kubernetes/overlays/prod/remove-deployment-redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata: {name: redis, namespace: emtaf}
$patch: delete
