infra/kubernetes/overlays/prod/remove-deployment-redpanda.yaml
apiVersion: apps/v1
kind: Deployment
metadata: {name: redpanda, namespace: emtaf}
$patch: delete
