infra/kubernetes/overlays/prod/school-service-env-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata: {name: school-service, namespace: emtaf}
spec:
 template:
  spec:
   containers:
   - name: school-service
