infra/kubernetes/overlays/prod/remove-service-emtaf-demo-wireframe.yaml
apiVersion: v1
kind: Service
metadata: {name: emtaf-demo-wireframe, namespace: emtaf}
$patch: delete
