infra/kubernetes/overlays/prod/remove-service-redpanda.yaml
apiVersion: v1
kind: Service
metadata: {name: redpanda, namespace: emtaf}
$patch: delete
